--- a/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample.csproj
+++ b/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample.csproj
@@ -112,9 +112,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\Startup.WebApi.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
