--- a/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/Web.config
+++ b/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/Web.config
@@ -8,7 +8,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  
+
+  <appSettings>
+    <add key="jwt:issuer" value="localhost"/>
+    <add key="jwt:audience" value="all"/>
+    <add key="jwt:secret" value="This is a secret !"/>
+    <add key="jwt:expiration" value="24"/> <!-- expressed in hours -->
+  </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -51,6 +58,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
