--- a/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/packages.config
+++ b/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Jwt" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
