Added the DbContext startup helper

--- a/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/Web.config
+++ b/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/Web.config
@@ -16,6 +16,10 @@
     <add key="jwt:expiration" value="24"/> <!-- expressed in hours -->
   </appSettings>
 
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Server=(local);Database=WebApiOwinIdentityOAuthJwtSample;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
