--- a/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample.csproj
+++ b/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample.csproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\Startup.DbContext.cs" />
     <Compile Include="App_Start\Startup.WebApi.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
