--- a/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample.csproj
+++ b/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample/WebApiOwinIdentityOAuthJwtSample.csproj
@@ -155,7 +155,9 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\Startup.DbContext.cs" />
     <Compile Include="App_Start\Startup.WebApi.cs" />
+    <Compile Include="Controllers\IdentityController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Models\Registration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\IdentityAuthorizationServerProvider.cs" />
     <Compile Include="Security\JwtDataFormat.cs" />
